update sb version and add some small changes